# build-day-manila-2026-starter-pack

./: pyproject.toml
agent/nodes/: state.py  temporal_memory.py
agent/src/agent/: __main__.py  prompt.py  state.py
agent/src/agent/nodes/: observe_node.py
agent/src/prompts/: observe_prompt.py
agent/src/services/: llm.py  video.py
core/src/core/: practice.py
