[project]
name = "casper-agent-starter"
version = "0.1.0"
description = "Starter template for building AI agents in the Casper Studios guessing game"
requires-python = ">=3.10"
dependencies = [
    "agent",
    "langgraph>=1.1.3",
]

[tool.uv.sources]
agent = { workspace = true }

[tool.uv.workspace]
members = ["core", "api", "agent"]
